# gtaol-dre-helper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RegionLocator.c  build-common.ps1  build-exe.bat  build-exe.ps1  build-nuitka.ps1  build-pyinstaller.ps1  build.ps1  config.example.yaml  console.ps1  constants.py  dev.ps1  find_coords.py  main.py  pyproject.toml  requirements.txt  test_ocr_by_screenshot.py  utils.py
gtaol_dre_helper/: app.py  style.scss  types.py
gtaol_dre_helper/models/: config.py  monitor.py
gtaol_dre_helper/screens/: dashboard.py
gtaol_dre_helper/services/: monitor.py
gtaol_dre_helper/utils/: config.py  hotkey.py  input.py  logging.py  ocr.py  paths.py  screen.py  text_parser.py
tests/: test_app.py  test_config.py  test_config_and_parser.py  test_input.py  test_monitor_service.py
tools/: find_coords.py
